Generate localhost-*.yaml

--- a/config/localhost-5.yaml
+++ b/config/localhost-5.yaml
@@ -8,3 +8,9 @@ host:
   - name: node3
     addr: localhost
     port: 8883
+  - name: node4
+    addr: localhost
+    port: 8884
+  - name: node5
+    addr: localhost
+    port: 8885
