--- a/config/localhost-2.yaml
+++ b/config/localhost-2.yaml
@@ -1,9 +1,7 @@
 host:
-    -
-      name: node1
-      addr: localhost
-      port: 8881
-    -
-      name: node2
-      addr: localhost
-      port: 8882
+  - name: node1
+    addr: localhost
+    port: 8881
+  - name: node2
+    addr: localhost
+    port: 8882
